--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,11 @@
+:root{
+  --highlight-yellow:#FFEB80,
+  --darker-yellow:#FFE767,
+  --common-gray:323232,
+}
+
+
+
 .map-container{
   width: 100%;
   height: 100vh;
